fotolarımızı janti fotolarla değiştirdim :)

--- a/index.html
+++ b/index.html
@@ -273,7 +273,18 @@
                 </div>
                 <div class="team-member">
                     <div class="image">
-                        <img src="assets/team/semih.png" alt="Recep Semih Kanber">
+                        <img src="assets/team/ahmetcelal.JPG" alt="Ahmet Celal Gündoğdu">
+                    </div>
+                    <div class="text">
+                        <strong>Ahmet Celal Gündoğdu</strong> <br>
+                        <em>DataCamp Proje Lideri</em> <br>
+                        <a class="mailFont" href="mailto:ahmetcelal.gundogdu@leader.compec.org" target="_top">ahmetcelal.gundogdu@leader.compec.org</a> <br>
+                     <!--    <a href="tel:+905071913564" target="_top">+90 507 191 35 64</a>-->  
+                    </div>
+                </div>
+                <div class="team-member">
+                    <div class="image">
+                        <img src="assets/team/semih.jpg" alt="Recep Semih Kanber">
                     </div>
                     <div class="text">
                         <strong>Recep Semih Kanber</strong> <br>
@@ -284,7 +295,7 @@
                 </div>
                 <div class="team-member">
                     <div class="image">
-                        <img src="assets/team/fatmanur.jfif" alt="Fatmanur Yaman">
+                        <img src="assets/team/fatmanur.JPG" alt="Fatmanur Yaman">
                     </div>
                     <div class="text">
                         <strong>Fatmanur Yaman</strong> <br>
@@ -293,17 +304,7 @@
                      <!--   <a href="tel:+905559939410" target="_top">+90 530 965 06 06</a>-->  
                     </div>
                 </div>
-                <div class="team-member">
-                    <div class="image">
-                        <img src="assets/team/ahmetcelal.png" alt="Ahmet Celal Gündoğdu">
-                    </div>
-                    <div class="text">
-                        <strong>Ahmet Celal Gündoğdu</strong> <br>
-                        <em>DataCamp Proje Lideri</em> <br>
-                        <a class="mailFont" href="mailto:ahmetcelal.gundogdu@leader.compec.org" target="_top">ahmetcelal.gundogdu@leader.compec.org</a> <br>
-                     <!--    <a href="tel:+905071913564" target="_top">+90 507 191 35 64</a>-->  
-                    </div>
-                </div>
+                
             </div>
             <!-- <h3>Boğaziçi Üniversitesi Albert Long Hall</h3> -->
             <amp-iframe
