--- a/program/index.html
+++ b/program/index.html
@@ -339,10 +339,12 @@
                                 </div>
                             </div>
                             <div class="image">
-                                <img src="../assets/partners/RGB-LogoV4.png" alt="">
+                                <img src="../assets/partners/2021/zirve/omer bayir.jfif" alt="">
                             </div>
                             <div class="text">
-                                <h3 class="item-title">Konuşma</h3>
+                                <h3 class="item-title">Data Engineering</h3>
+                                <hr/>
+                                <h4>Ömer Bayır- Data Architecture and Engineering Team Lead, CCI</h4>
                             </div>
                         </div>
                         <div class="program-item">
@@ -603,10 +605,12 @@
                                 </div>
                             </div>
                             <div class="image">
-                                <img src="../assets/partners/RGB-LogoV4.png" alt="">
+                                <img src="../assets/partners/2021/zirve/cagri aksu.jpg" alt="">
                             </div>
                             <div class="text">
-                                <h3 class="item-title">Konuşma</h3>
+                                <h3 class="item-title">MLOps</h3>
+                                <hr/>
+                                <h4>Çağrı Aksu - Founder, datasciencearthML </h4>
                             </div>
                         </div>
                         <div class="program-item">
