--- a/program/index.html
+++ b/program/index.html
@@ -610,7 +610,7 @@
                             <div class="text">
                                 <h3 class="item-title">MLOps</h3>
                                 <hr/>
-                                <h4>Çağrı Aksu - Founder, datasciencearthML </h4>
+                                <h4>Çağrı Aksu - Founder, datasciencearth </h4>
                             </div>
                         </div>
                         <div class="program-item">
