--- a/sponsorlar/index.html
+++ b/sponsorlar/index.html
@@ -222,6 +222,20 @@
                         </div>
 
                     </div>
+                    <div class="row align-items-center" style="align-items: center; ">
+                        <div class="col-12">
+                            <h3>Ana Partner</h3>
+                            <hr style="border-color: #000;">
+                        </div>
+                        <div class="col-lg-6 mx-auto">
+                            <div class="sponsor">
+                                <a target="_blank" href="https://globalaihub.com/">
+                                    <img style="width: 100%;" src="/assets/partners/2021/destekçilerimiz/gaih.jpg" alt="">
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                        
 
                     <div class="row align-items-center" style="align-items: center; ">
                         <div class="col-12">
@@ -239,7 +253,14 @@
                             <div class="col-lg-6 mx-auto">
                                 <div class="sponsor">
                                     <a target="_blank" href="https://www.datasciencearth.com/">
-                                        <img style="width: 60%;" src="/assets/partners/2021/destekçilerimiz/data_science_earth.png" alt="">
+                                        <img style="width: 50%;" src="/assets/partners/2021/destekçilerimiz/data_science_earth.png" alt="">
+                                    </a>
+                                </div>
+                            </div>
+                            <div class="col-lg-6 mx-auto">
+                                <div class="sponsor">
+                                    <a target="_blank" href="http://deeplearningturkiye.org/">
+                                        <img style="width: 100%;" src="/assets/partners/2021/destekçilerimiz/deep_learning.jpg" alt="">
                                     </a>
                                 </div>
                             </div>
