ahmet erdem ve workshop eklendi

--- a/program/index.html
+++ b/program/index.html
@@ -466,11 +466,12 @@
                                 </div>
                             </div>
                             <div class="image">
-                                <img src="../assets/partners/RGB-LogoV4.png" alt="">
+                                <img src="../assets/partners/2021/zirve/ahmet erdem.jfif" alt="">
                             </div>
                             <div class="text">
-                                <h3 class="item-title">Konuşma</h3>
-                                
+                                <h3 class="item-title">Competitive Machine Learning</h3>
+                                <hr/>
+                                <h4>Ahmet Erdem - Kaggle Grandmaster & Senior Data Scientist, Nvidia</h4>
                             </div>
                         </div>
                         <div class="program-item">
@@ -710,6 +711,29 @@
                                     <h3 class="item-title">Build a Data Processing Pipeline and Data Lake</h3>
                                     <hr/>
                                     <h4>Esra Kayabalı - Solutions Arthitect , AWS</h4>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="program-container">
+                            <div class="program-item">
+                                <div class="image">
+                                    <img src="../assets/partners/2021/destekçilerimiz/global_maksimum2.jfif" alt="">
+                                </div>
+                                <div class="time">
+                                    <div>
+                                        20<br>
+                                        00
+                                    </div>
+                                    <hr>
+                                    <div>
+                                        21<br>
+                                        30
+                                    </div>
+                                </div>
+                                <div class="text">
+                                    <h3 class="item-title">Deep Learning for Semantic Segmentation - Teknofest First Place Solution</h3>
+                                    <hr/>
+                                    <h4>Global Maksimum</h4>
                                 </div>
                             </div>
                         </div>
