--- a/program/index.html
+++ b/program/index.html
@@ -765,6 +765,29 @@
                                 </div>
                             </div>
                         </div>
+                        <div class="program-container">
+                            <div class="program-item">
+                                <div class="image">
+                                    <img src="../assets/partners/2021/destekçilerimiz/global_maksimum2.jfif" alt="">
+                                </div>
+                                <div class="time">
+                                    <div>
+                                        20<br>
+                                        00
+                                    </div>
+                                    <hr>
+                                    <div>
+                                        21<br>
+                                        30
+                                    </div>
+                                </div>
+                                <div class="text">
+                                    <h3 class="item-title">Intro to end2end NLP Applications</h3>
+                                    <hr/>
+                                    <h4>Global Maksimum</h4>
+                                </div>
+                            </div>
+                        </div>
 
                         <!--
                         <div class="program-item">
