program ve sponsorlar güncellendi

--- a/sponsorlar/index.html
+++ b/sponsorlar/index.html
@@ -197,6 +197,20 @@
                                 </a>
                             </div>
                         </div>
+                        <div class="col-lg-6 mx-auto">
+                            <div class="sponsor">
+                                <a target="_blank" href="https://www.dogmaalares.com/">
+                                    <img style="width: 90%;" src="/assets//partners/2021/destekçilerimiz/dogma_alares_logo.png" alt="">
+                                </a>
+                            </div>
+                        </div>
+                        <div class="col-lg-6 mx-auto">
+                            <div class="sponsor">
+                                <a target="_blank" href="https://www.kkb.com.tr/">
+                                    <img style="width: 90%;" src="/assets//partners/2021/destekçilerimiz/kredi_kayit_burosu.png" alt="">
+                                </a>
+                            </div>
+                        </div>
 
                     </div>
                     <div class="row align-items-center" style="align-items: center ">
@@ -281,20 +295,28 @@
                     </div>
                 -->
 
-                    <div class="row mx-auto" style="align-items: center; display: none;">
+                    <div class="row mx-auto" style="align-items: center;">
                         <div class="col-12">
                             <h3>Destekçiler</h3>
                             <hr style="border-color: #000;">
                         </div>
 
-                        <div class="col-lg-4">
+                        <div class="col-lg-4 mx-auto">
                             <div class="sponsor">
-                                <a target="_blank" href="https://www.microsoft.com/">
-                                    <img style="width: 70%;" src="/assets/partners/microsoft.png" alt="">
+                                <a target="_blank" href="https://aws.amazon.com/tr/">
+                                    <img style="width: 70%;" src="/assets/partners/2021/workshop/AWS_logo.jpg" alt="">
                                 </a>
                             </div>
                         </div>
-
+                        <div class="col-lg-4 mx-auto">
+                            <div class="sponsor">
+                                <a target="_blank" href="https://www.turktelekom.com.tr/sayfalar/ana-sayfa.aspx">
+                                    <img style="width: 70%;" src="/assets/partners/2021/destekçilerimiz/tt.jpg" alt="">
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                    <!--
                         <div class="col-lg-4">
                             <div class="sponsor">
                                 <a target="_blank" href="https://www.kocdigital.com/">
@@ -481,6 +503,7 @@
                                 </a>
                             </div>
                         </div>
+                    -->
                         <!--
                         <div class="col-lg-4 mx-auto">
                             <div class="sponsor">
