--- a/program/index.html
+++ b/program/index.html
@@ -384,8 +384,8 @@
                                 </div>
                             </div>
                             <div class="image">
-                                <img style="width: 90%" src="../assets/partners/2021/zirve/faruk dincer.jfif" alt="">
-                                <img style="width: 90%" src="../assets/partners/2021/zirve/latif ozen.jfif" alt="">
+                                <img src="../assets/partners/2021/zirve/faruk dincer.jfif" alt="">
+                                <img src="../assets/partners/2021/zirve/latif ozen.jfif" alt="">
                             </div>
                             <div class="text">
                                 <h3 class="item-title">Kodluyoruz</h3>
