--- a/sponsorlar/index.html
+++ b/sponsorlar/index.html
@@ -294,6 +294,18 @@
 
                     </div>
                 -->
+                    <div class="row mx-auto" style="align-items: center;">
+                        <div class="col-12">
+                            <h3>Altın Destekçi</h3>
+                            <hr style="border-color: #000;">
+                        </div>
+                        <div class="col-lg-6 mx-auto">
+                            <div class="sponsor">
+                                <a target="_blank" href="https://www.turktelekom.com.tr/sayfalar/ana-sayfa.aspx">
+                                    <img style="width: 70%;" src="/assets/partners/2021/destekçilerimiz/tt.jpg" alt="">
+                                </a>
+                            </div>
+                        </div>
 
                     <div class="row mx-auto" style="align-items: center;">
                         <div class="col-12">
@@ -305,13 +317,6 @@
                             <div class="sponsor">
                                 <a target="_blank" href="https://aws.amazon.com/tr/">
                                     <img style="width: 70%;" src="/assets/partners/2021/workshop/AWS_logo.jpg" alt="">
-                                </a>
-                            </div>
-                        </div>
-                        <div class="col-lg-4 mx-auto">
-                            <div class="sponsor">
-                                <a target="_blank" href="https://www.turktelekom.com.tr/sayfalar/ana-sayfa.aspx">
-                                    <img style="width: 70%;" src="/assets/partners/2021/destekçilerimiz/tt.jpg" alt="">
                                 </a>
                             </div>
                         </div>
