--- a/program/index.html
+++ b/program/index.html
@@ -775,7 +775,7 @@
                                     </div>
                                 </div>
                                 <div class="text">
-                                    <h3 class="item-title">Deep Learning for Semantic Segmentation - Teknofest First Place Solution</h3>
+                                    <h3 class="item-title">Intro to end2end NLP Applications</h3>
                                     <hr/>
                                     <h4>Global Maksimum</h4>
                                 </div>
@@ -821,7 +821,7 @@
                                     </div>
                                 </div>
                                 <div class="text">
-                                    <h3 class="item-title">Intro to end2end NLP Applications</h3>
+                                    <h3 class="item-title">Deep Learning for Semantic Segmentation - Teknofest First Place Solutio</h3>
                                     <hr/>
                                     <h4>Global Maksimum</h4>
                                 </div>
