--- a/program/index.html
+++ b/program/index.html
@@ -241,12 +241,12 @@
                                 </div>
                             </div>
                             <div class="image">
-                                <img src="https://media.discordapp.net/attachments/772498337978384424/772547711798870056/sisecam.png?width=532&height=532" alt="">
+                                <img src="/assets/partners/2021/zirve/secil kokturk.jpeg" alt="">
                             </div>
                             <div class="text">
-                                <h3 class="item-title">Konuşma</h3>
+                                <h3 class="item-title">Şişecam</h3>
                                 <hr/>
-                                <h4>Şişecam</h4>
+                                <h4>Seçil Köktürk – Şişecam BT Veri Bilimi Uzmanı</h4>
                                 
                             </div>
                         </div>
@@ -429,7 +429,7 @@
                                 <img src="../assets/partners/2021/zirve/berat utkan mentes.jfif" alt="">
                             </div>
                             <div class="text">
-                                <h3 class="item-title">Yıldız Holding</h3>
+                                <h3 class="item-title">Yıldız Holding Yapay Zeka ve İleri Analitik Uygulamaları</h3>
                                 <hr/>
                                 <h4>Berat Utkan Menteş - İleri Analitik Çözümler Müdürü, Yıldız Holding</h4>
                             </div>
@@ -778,6 +778,27 @@
                                     <h3 class="item-title">Intro to end2end NLP Applications</h3>
                                     <hr/>
                                     <h4>Global Maksimum</h4>
+                                </div>
+                            </div>
+                            <div class="program-item">
+                                <div class="image">
+                                    <img src="../assets/partners/2021/workshop/pulpo.png" alt="">
+                                </div>
+                                <div class="time">
+                                    <div>
+                                        19<br>
+                                        00
+                                    </div>
+                                    <hr>
+                                    <div>
+                                        20<br>
+                                        30
+                                    </div>
+                                </div>
+                                <div class="text">
+                                    <h3 class="item-title">Spark AR - AR Games</h3>
+                                    <hr/>
+                                    <h4>Hüseyin Konukseven - Upfilts-Product Owner</h4>
                                 </div>
                             </div>
                         </div>
