kodluyoruz ve yıldız holfing

--- a/sponsorlar/index.html
+++ b/sponsorlar/index.html
@@ -185,7 +185,7 @@
                         <div class="col-lg-6">
                             <div class="sponsor">
                                 <a target="_blank" href="https://www.yildizholding.com.tr/">
-                                    <img style="width: 70%;" src="/assets/partners/yildizholding.jpg" alt="">
+                                    <img style="width: 100%;" src="/assets/partners/2021/destekçilerimiz/Yıldız Holding.png" alt="">
                                 </a>
                             </div>
                         </div>
@@ -252,6 +252,13 @@
                                 <div class="sponsor">
                                     <a target="_blank" href="https://www.datasciencearth.com/">
                                         <img style="width: 55%;" src="/assets/partners/2021/destekçilerimiz/data_science_earth.png" alt="">
+                                    </a>
+                                </div>
+                            </div>
+                            <div class="col-lg-6 mx-auto">
+                                <div class="sponsor">
+                                    <a target="_blank" href="https://www.kodluyoruz.org/">
+                                        <img style="width: 90%;" src="/assets/partners/2021/destekçilerimiz/kodluyoruz.png" alt="">
                                     </a>
                                 </div>
                             </div>
