--- a/program/index.html
+++ b/program/index.html
@@ -163,7 +163,6 @@
                                 <h4>Tuna Tuğcu - Profesör, Boğaziçi Üniversitesi Bilgisayar Mühendisliği Bölüm Başkanı</h4>
                             </div>
                         </div>
-                        <!--Buraya kadar.-->
                         <div class="program-item">
                             <div class="time">
                                 <div>
@@ -392,7 +391,7 @@
                                 <img src="../assets/partners/2021/zirve/latif ozen.jfif" alt="">
                             </div>
                             <div class="text">
-                                <h3 class="item-title">Kodluyoruz</h3>
+                                <h3 class="item-title">Yazılım Kariyerine Yolculuk</h3>
                                 <hr/>
                                 <h4>Faruk Dinçer - Topluluk Uzmanı, Kodluyoruz</h4>
                                 <h4>Latif Özen - Topluluk Yönetimi Uzman Yardımcısı, Kodluyoruz</h4>
@@ -878,7 +877,7 @@
                                     </div>
                                 </div>
                                 <div class="text">
-                                    <h3 class="item-title">Deep Learning for Semantic Segmentation - Teknofest First Place Solutio</h3>
+                                    <h3 class="item-title">Deep Learning for Semantic Segmentation - Teknofest First Place Solution</h3>
                                     <hr/>
                                     <h4>Global Maksimum</h4>
                                 </div>
