--- a/program/index.html
+++ b/program/index.html
@@ -329,7 +329,7 @@
                             <div class="text">
                                 <h3 class="item-title">Panel</h3>
                                 <hr/>
-                                <h4>Demirören Teknoloji</h4>
+                                <h4></h4>
                             </div>
                         </div>
                         <div class="program-item">
@@ -565,7 +565,7 @@
                                 <img src="../assets/partners/2021/destekçilerimiz/global_maksimum2.jfif" alt="">
                             </div>
                             <div class="text">
-                                <h3 class="item-title">Konuşma</h3>
+                                <h3 class="item-title"><b>Breaking Out Of Notebooks:</b> Unguarded Cells of Data Science</h3>
                                 <hr/>
                                 <h4>Global Maksimum</h4>
                             </div>
@@ -813,6 +813,27 @@
                                     <h3 class="item-title">Intro to end2end NLP Applications</h3>
                                     <hr/>
                                     <h4>Global Maksimum</h4>
+                                </div>
+                            </div>
+                            <div class="program-item">
+                                <div class="image">
+                                    <img src="../assets/partners/2021/zirve/emin ozturk.jfif" alt="">
+                                </div>
+                                <div class="time">
+                                    <div>
+                                        20<br>
+                                        00
+                                    </div>
+                                    <hr>
+                                    <div>
+                                        22<br>
+                                        22
+                                    </div>
+                                </div>
+                                <div class="text">
+                                    <h3 class="item-title">Build a Data Processing Pipeline and Data Lake</h3>
+                                    <hr/>
+                                    <h4>Emin Öztürk - Kaggle Master & Lead Data Scientist, Affiniti</h4>
                                 </div>
                             </div>
                             <div class="program-item">
