--- a/program/index.html
+++ b/program/index.html
@@ -198,7 +198,7 @@
                             </div>
                             <div class="image">
                                 
-                                <img src="../assets/partners/2021/destekçilerimiz/dogmaalares.jfif" alt="">
+                                <img src="../assets/partners/2021/zirve/mete alp oguzer.jfif" alt="">
                             </div>
                             <div class="text">
                                 <h3 class="item-title">Yeni Nesil Danışmanlıkta Veri ve Makine Öğrenmesi</h3>
@@ -439,28 +439,6 @@
                                 <h4>Berat Utkan Menteş - İleri Analitik Çözümler Müdürü, Yıldız Holding</h4>
                             </div>
                         </div>
-                        <div class="program-item">
-                            <div class="time">
-                                <div>
-                                    19<br>
-                                    00
-                                </div>
-                                <hr>
-                                <div>
-                                    21<br>
-                                    00
-                                </div>
-                            </div>
-                            <div class="image">
-                                <img src="../assets/partners/2021/zirve/arkadas ozakin.jpeg" alt="">
-                            </div>
-                            <div class="text">
-                                <h3 class="item-title">Bir Akademisyenin Kariyer Yolculuğu ve Q&A
-                                </h3>
-                                <hr/>
-                                <h4>Arkadaş Özakın - Machine Learning Researcher, Boğaziçi University</h4>
-                            </div>
-                        </div>
                     </div>  
                     
                     <div class="program-container">
@@ -505,7 +483,7 @@
                             <div class="text">
                                 <h3 class="item-title">Konuşma</h3>
                                 <hr/>
-                                <h4>Tazi AI Systems</h4>
+                                <h4></h4>
                             </div>
                         </div>
                         <div class="program-item">
@@ -775,7 +753,9 @@
                             </div>
                             <div class="program-item">
                                 <div class="image">
-                                    <img src="../assets/partners/2021/destekçilerimiz/dogmaalares.jfif" alt="">
+                                    <img src="../assets/partners/2021/zirve/atilberk.jfif" alt="">
+                                    <img src="../assets/partners/2021/zirve/çisem.jfif" alt="">
+                                    <img src="../assets/partners/2021/zirve/ahmet yuksel.jfif" alt="">
                                 </div>
                                 <div class="time">
                                     <div>
@@ -791,7 +771,9 @@
                                 <div class="text">
                                     <h3 class="item-title">Workshop</h3>
                                     <hr/>
-                                    <h4>Dogma Alares</h4>
+                                    <h4>Atılberk Çelebi - Senior Machine Learning Engineer, Dogma Alares</h4>
+                                    <h4>Çisem Altan - Machine Learning Engineer, Dogma Alares</h4>
+                                    <h4>Ahmet Yüksel - Machine Learning Engineer, Dogma Alares</h4>
                                 </div>
                             </div>
                             <div class="program-item">
@@ -989,7 +971,7 @@
                                     <img src="../assets/partners/2021/destekçilerimiz/globalai.jpg" alt="">
                                 </div>
                                 <div class="text">
-                                    <h3 class="item-title">Machine Learning'e Giriş</h3>
+                                    <h3 class="item-title">How to Break Into Machine Learning</h3>
                                     <hr/>
                                     <h4>Global AI Hub</h4>
                                 </div>
