çetin meriçli eklendi

--- a/program/index.html
+++ b/program/index.html
@@ -409,7 +409,7 @@
                                 </div>
                             </div>
                             <div class="image">
-                                <img src="../assets/partners/RGB-LogoV4.png" alt="">
+                                <img src="../assets/partners/2021/zirve/cetin mericli.jfif" alt="">
                             </div>
                             <div class="text">
                                 <h3 class="item-title">Locomation'da Yapay Zeka Uygulamaları</h3>
