emin öztürk güncelleme

--- a/program/index.html
+++ b/program/index.html
@@ -812,7 +812,7 @@
                                     </div>
                                 </div>
                                 <div class="text">
-                                    <h3 class="item-title">Build a Data Processing Pipeline and Data Lake</h3>
+                                    <h3 class="item-title">Kaggle and Data Science</h3>
                                     <hr/>
                                     <h4>Emin Öztürk - Kaggle Master & Lead Data Scientist, Affiniti</h4>
                                 </div>
