--- a/program/index.html
+++ b/program/index.html
@@ -794,6 +794,12 @@
                                     <h3 class="item-title">Intro to end2end NLP Applications</h3>
                                     <hr/>
                                     <h4>Global Maksimum</h4>
+                                    <hr/>
+                                    <h4>Berk Karabillioğlu - Jr. Data Scientist, Global Maksimum</h4>
+                                    <h4>Dorukhan Afacan - Data Scientist, Global Maksimum</h4>
+                                    <h4>Askar Bozcan - Apprentice Data Scientist, Global Maksimum</h4>
+                                    <h4>Ertuğrul Demir - Data Scientist, Global Maksimum</h4>
+                                    <h4>Onat Yapıcı - Apprentice Data Scientist, Global Maksimum</h4>
                                 </div>
                             </div>
                             <div class="program-item">
@@ -882,6 +888,12 @@
                                     <h3 class="item-title">Deep Learning for Semantic Segmentation - Teknofest First Place Solution</h3>
                                     <hr/>
                                     <h4>Global Maksimum</h4>
+                                    <hr/>
+                                    <h4>Berk Karabillioğlu - Jr. Data Scientist, Global Maksimum</h4>
+                                    <h4>Dorukhan Afacan - Data Scientist, Global Maksimum</h4>
+                                    <h4>Askar Bozcan - Apprentice Data Scientist, Global Maksimum</h4>
+                                    <h4>Ertuğrul Demir - Data Scientist, Global Maksimum</h4>
+                                    <h4>Onat Yapıcı - Apprentice Data Scientist, Global Maksimum</h4>
                                 </div>
                             </div>
                         </div>
