tazi sponsıra eklendi

--- a/sponsorlar/index.html
+++ b/sponsorlar/index.html
@@ -137,36 +137,19 @@
 
                     </div>
 
-                    <div class="row" style="align-items: center; display: none;">
+                    <div class="row" style="align-items: center;">
                         <div class="col-12">
                             <h3>Platin Sponsorlar</h3>
                             <hr style="border-color: #000;">
                         </div>
 
-                        <div class="col-lg-6">
-                            <div class="sponsor">
-                                <a target="_blank" href="https://kodluyoruz.org/">
-                                    <img style="width: 90%;" src="https://miro.medium.com/max/3150/2*TZeK0kyHTRHVv3gUi8BtQg.png" alt="">
+                        <div class="col-lg-6 mx-auto">
+                            <div class="sponsor">  
+                                <a target="_blank" href="https://www.tazi.ai/">
+                                    <img style="width: 90%;" src="/assets/partners/2021/destekçilerimiz/taziai.png" alt="">
                                 </a>
                             </div>
                         </div>
-
-                        <div class="col-lg-6">
-                            <div class="sponsor">
-                                <a target="_blank" href="https://kodluyoruz.org/">
-                                    <img style="width: 70%;" src="https://miro.medium.com/max/3150/2*TZeK0kyHTRHVv3gUi8BtQg.png" alt="">
-                                </a>
-                            </div>
-                        </div>
-
-                        <div class="col-lg-6">
-                            <div class="sponsor">
-                                <a target="_blank" href="https://kodluyoruz.org/">
-                                    <img style="width: 70%;" src="https://miro.medium.com/max/3150/2*TZeK0kyHTRHVv3gUi8BtQg.png" alt="">
-                                </a>
-                            </div>
-                        </div>
-
                     </div>
 
                     <div class="row mx-auto" style="align-items: center;">
