arkadaş hoca güncelleme

--- a/program/index.html
+++ b/program/index.html
@@ -949,7 +949,7 @@
                                     <img src="../assets/partners/2021/zirve/arkadas ozakin.jpeg" alt="">
                                 </div>
                                 <div class="text">
-                                    <h3 class="item-title">Bir Akademisyenin Kariyer Yolculuğu ve Q&A</h3>
+                                    <h3 class="item-title">Akademiden Silikon Vadisine, Finanstan Tekrar Akademiye: Bir Yapay Öğrenme Yolculuğundan Çıkan Dersler</h3>
                                     <hr/>
                                     <h4>Arkadaş Özakın - Machine Learning Researcher, Boğaziçi University</h4>
                                 </div>
