comment unused code that causes console errors (sentry.io)

--- a/kayit/index.html
+++ b/kayit/index.html
@@ -365,8 +365,8 @@
         
         </script>
         <script src="/main.js"></script>
-        <link href="https://datacamp-form-widget.onrender.com/index.css" rel="stylesheet" />
-        <script src="https://datacamp-form-widget.onrender.com/index.js"></script>
+        <!-- <link href="https://datacamp-form-widget.onrender.com/index.css" rel="stylesheet" />
+        <script src="https://datacamp-form-widget.onrender.com/index.js"></script> -->
 
     </body>
 </html>
