--- a/sponsorlar/index.html
+++ b/sponsorlar/index.html
@@ -305,8 +305,80 @@
 
                         <div class="col-lg-4 mx-auto">
                             <div class="sponsor">
-                                <a target="_blank" href="https://aws.amazon.com/tr/">
+                                <a target="_blank" href="">
                                     <img style="width: 70%;" src="/assets/partners/2021/workshop/AWS_logo.jpg" alt="">
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row mx-auto" style="align-items: center;">
+                        <div class="col-12">
+                            <h3>Okul Kulüpleri</h3>
+                            <hr style="border-color: #000;">
+                        </div>
+
+                        <div class="col-lg-4 mx-auto">
+                            <div class="sponsor">
+                                <a target="_blank" href="https://www.instagram.com/bilkentprogrammingclub/?hl=tr">
+                                    <img style="width: 80%;" src="/assets/partners/2021/kulupler/kulup1.png" alt="">
+                                </a>
+                            </div>
+                        </div>
+
+                        <div class="col-lg-4 mx-auto">
+                            <div class="sponsor">
+                                <a target="_blank" href="https://www.linkedin.com/company/aucomputersociety/">
+                                    <img style="width: 80%;" src="/assets/partners/2021/kulupler/kulup2.png" alt="">
+                                </a>
+                            </div>
+                        </div>
+
+                        <div class="col-lg-4 mx-auto">
+                            <div class="sponsor">
+                                <a target="_blank" href="https://koubitek.com/">
+                                    <img style="width: 100%;" src="/assets/partners/2021/kulupler/kulup3.png" alt="">
+                                </a>
+                            </div>
+                        </div>
+                        <div class="col-lg-4 mx-auto">
+                            <div class="sponsor">
+                                <a target="_blank" href="https://www.instagram.com/ieee.tedu/?hl=tr">
+                                    <img style="width: 120%;" src="/assets/partners/2021/kulupler/kulup4.png" alt="">
+                                </a>
+                            </div>
+                        </div>
+                        <div class="col-lg-4 mx-auto">
+                            <div class="sponsor">
+                                <a target="_blank" href="https://www.instagram.com/ieeemedipol/">
+                                    <img style="width: 120%;" src="/assets/partners/2021/kulupler/kulup5.jpg" alt="">
+                                </a>
+                            </div>
+                        </div>
+                        <div class="col-lg-4 mx-auto">
+                            <div class="sponsor">
+                                <a target="_blank" href="https://www.linkedin.com/company/macsecommunity/">
+                                    <img style="width: 60%;" src="/assets/partners/2021/kulupler/kulup6.png" alt="">
+                                </a>
+                            </div>
+                        </div>
+                        <div class="col-lg-4 mx-auto">
+                            <div class="sponsor">
+                                <a target="_blank" href="https://www.linkedin.com/company/odtu-yzt/?originalSubdomain=tr">
+                                    <img style="width: 90%;" src="/assets/partners/2021/kulupler/kulup7.png" alt="">
+                                </a>
+                            </div>
+                        </div>
+                        <div class="col-lg-4 mx-auto">
+                            <div class="sponsor">
+                                <a target="_blank" href="https://www.linkedin.com/company/ieee-bau/">
+                                    <img style="width: 100%;" src="/assets/partners/2021/kulupler/kulup8.png" alt="">
+                                </a>
+                            </div>
+                        </div>
+                        <div class="col-lg-4 mx-auto">
+                            <div class="sponsor">
+                                <a target="_blank" href=" https://www.linkedin.com/company/au-yazgit/">
+                                    <img style="width: 100%;" src="/assets/partners/2021/kulupler/kulup9.png" alt="">
                                 </a>
                             </div>
                         </div>
